Error dikit TextView tadi, sekarang udah aman

--- a/app/src/main/res/layout/fragment_child_profile.xml
+++ b/app/src/main/res/layout/fragment_child_profile.xml
@@ -163,7 +163,7 @@
             android:layout_marginBottom="50dp">
 
             <TextView
-                android:id="@+id/textInformasiAnak"
+                android:id="@+id/textInformasiAnak1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Informasi Anak"
