--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -1,119 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E2F1F8"
     android:paddingStart="40dp"
     android:paddingTop="50dp"
     android:paddingEnd="40dp"
+    android:orientation="vertical"
     tools:context=".ComplaintActivity">
 
-    <TextView
-        android:id="@+id/textkeluhan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginRight="20dp"
-        android:text="Keluhan Anak" />
+        <TextView
+            android:id="@+id/textkeluhan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:text="Keluhan Anak" />
 
-    <TextView
-        android:id="@+id/textamengatasi"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="68dp"
-        android:layout_toRightOf="@id/textkeluhan"
-        android:text="cara mengatasinya" />
+        <TextView
+            android:id="@+id/textcaramengatasi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:text="Cara Mengatasinya" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/textamengatasi"
-        tools:srcCompat="@tools:sample/avatars" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_marginTop="60dp"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/image4"/>
 
-    <TextView
-        android:id="@+id/textsumber"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="230dp"
-        android:layout_below="@id/imageView"
-        android:text="Demam" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/bg_rounded_15_blue">
+            <TextView
+                android:id="@+id/textsumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="20dp"
+                android:textColor="@color/white"
+                android:text="Demam" />
 
-    <TextView
-        android:id="@+id/textcarasembuh"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="90dp"
-        android:layout_below="@id/textsumber"
-        android:text="1. Berikan kompres" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <TextView
-        android:id="@+id/textcarasembuh2"
-        android:layout_width="400dp"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
+        android:orientation="vertical"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="90dp"
-        android:layout_below="@id/textcarasembuh"
-        android:text="2. Hindari baju tebal" />
+        android:background="@drawable/bg_rounded_15_blue">
 
-    <TextView
-        android:id="@+id/textcarasembuh3"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="50dp"
-        android:layout_below="@id/textcarasembuh2"
-        android:text="3. Makanan dan minum yang cukup" />
+        <TextView
+            android:id="@+id/textcarasembuh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="90dp"
+            android:layout_below="@id/textsumber"
+            android:textColor="@color/white"
+            android:text="1. Berikan kompres" />
 
-    <TextView
-        android:id="@+id/textcarasembuh4"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="140dp"
-        android:layout_below="@id/textcarasembuh3"
-        android:text="4. Jaga suhu ruangan" />
+        <TextView
+            android:id="@+id/textcarasembuh2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="90dp"
+            android:layout_below="@id/textcarasembuh"
+            android:textColor="@color/white"
+            android:text="2. Hindari baju tebal" />
 
-    <TextView
-        android:id="@+id/textcarasembuh5"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="80dp"
-        android:layout_below="@id/textcarasembuh4"
-        android:text="5. Mandikan dengan air hangat" />
+        <TextView
+            android:id="@+id/textcarasembuh3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_below="@id/textcarasembuh2"
+            android:textColor="@color/white"
+            android:text="3. Makanan dan minum yang cukup" />
 
-    <TextView
-        android:id="@+id/textcarasembuh6"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="50dp"
-        android:layout_below="@id/textcarasembuh5"
-        android:text="6. Beri obat-obatan pereda demam" />
+        <TextView
+            android:id="@+id/textcarasembuh4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="140dp"
+            android:layout_below="@id/textcarasembuh3"
+            android:textColor="@color/white"
+            android:text="4. Jaga suhu ruangan" />
+
+        <TextView
+            android:id="@+id/textcarasembuh5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="80dp"
+            android:layout_below="@id/textcarasembuh4"
+            android:textColor="@color/white"
+            android:text="5. Mandikan dengan air hangat" />
+
+        <TextView
+            android:id="@+id/textcarasembuh6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_below="@id/textcarasembuh5"
+            android:textColor="@color/white"
+            android:layout_marginBottom="10dp"
+            android:text="6. Beri obat-obatan pereda demam" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
         android:id="@+id/textperingatan"
-        android:layout_width="400dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="70dp"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
         android:layout_below="@id/textcarasembuh6"
-        android:text="jika demam semakin parah maka anak harus dilarikan ke dokter terdekat!" />
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:text="jika demam semakin parah maka\nanak harus dilarikan ke dokter\nterdekat!" />
 
-</RelativeLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
