--- a/app/src/main/res/layout/activity_new_act.xml
+++ b/app/src/main/res/layout/activity_new_act.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,86 +7,135 @@
     android:paddingStart="40dp"
     android:paddingTop="50dp"
     android:paddingEnd="40dp"
+    android:orientation="vertical"
+    android:background="#E2F1F8"
     tools:context=".NewActActivity">
 
     <TextView
         android:id="@+id/textaktivitasbaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginRight="20dp"
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         android:text="Aktivitas Baru" />
 
     <TextView
         android:id="@+id/textkegiatananak"
-        android:layout_width="400dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_toRightOf="@id/textaktivitasbaru"
-        android:text="yang dilakukan anak \n bulan ini" />
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:text="yang dilakukan anak bulan ini" />
 
-    <ImageView
-        android:id="@+id/imageView"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="85dp"
-        android:layout_marginRight="20dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_rounded_10_bluemuda">
 
-    <TextView
-        android:id="@+id/textbulan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imageView"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="20dp"
-        android:text="Bulan Agustus" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            tools:src="@drawable/image7" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textbulan"
-        android:layout_marginLeft="40dp"
-        android:text="Makan Sendiri" />
+        <TextView
+            android:id="@+id/textinfo1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Makan Sendiri"
+            android:textSize="15dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/bg_rounded"
+            android:textAlignment="center"
+            android:textColor="@color/black"/>
 
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/checkBox"
-        android:layout_marginLeft="40dp"
-        android:text="Mandiri" />
+        <TextView
+            android:id="@+id/textinfo2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mandiri"
+            android:textSize="15dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/bg_rounded"
+            android:textAlignment="center"
+            android:textColor="@color/black"/>
 
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/checkBox2"
-        android:layout_marginLeft="40dp"
-        android:text="Mandi Sendiri" />
+        <TextView
+            android:id="@+id/textinfo3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Berbicara di depan umum"
+            android:textSize="15dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:textAlignment="center"
+            android:background="@drawable/bg_rounded"
+            android:textColor="@color/black"/>
 
-    <CheckBox
-        android:id="@+id/checkBox4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/checkBox3"
-        android:layout_marginLeft="40dp"
-        android:text="Menegur Orang" />
+        <TextView
+            android:id="@+id/textinfo4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Menegur Orang"
+            android:textSize="15dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
+            android:textAlignment="center"
+            android:background="@drawable/bg_rounded"
+            android:textColor="@color/black"/>
 
-    <EditText
-        android:id="@+id/editTextTextMultiLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/checkBox4"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="text"
-        android:hint="Tambahkan Aktivitas +"/>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_rounded_15_blue">
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/texttambahkan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tambahkan"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="20dp"
+                android:background="@drawable/bg_rounded_15_blue"
+                android:textColor="@color/white"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
