--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -156,11 +156,10 @@
             android:layout_height="wrap_content"
             android:text="Makan Sendiri"
             android:textSize="15dp"
-            android:paddingStart="45dp"
-            android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:textAlignment="center"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
@@ -173,8 +172,7 @@
             android:layout_height="wrap_content"
             android:text="Mandiri"
             android:textSize="15dp"
-            android:paddingStart="45dp"
-            android:paddingBottom="5dp"
+            android:textAlignment="center"
             android:paddingTop="5dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
@@ -190,9 +188,8 @@
             android:layout_height="wrap_content"
             android:text="Berbicara di depan umum"
             android:textSize="15dp"
-            android:paddingStart="45dp"
-            android:paddingBottom="5dp"
             android:paddingTop="5dp"
+            android:textAlignment="center"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_gravity="center"
@@ -207,9 +204,8 @@
             android:layout_height="wrap_content"
             android:text="Menegur Orang"
             android:textSize="15dp"
-            android:paddingStart="45dp"
-            android:paddingBottom="5dp"
             android:paddingTop="5dp"
+            android:textAlignment="center"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_gravity="center"
