--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -36,18 +36,93 @@
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:text="Apa itu Pertumbuhan dan Perkembangan" />
+            android:text="Artikel Anak" />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/bg_rounded_30">
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_gravity="start"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/image1" />
+
+            <TextView
+                android:id="@+id/textusername1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:text="Ibu Ajeng" />
+
+            <TextView
+                android:id="@+id/textisidiskusi1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:text="Bu, permisi saya mau tanya susu yang bagus untuk umur 3 tahun apa ya?" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/bg_rounded_30">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_gravity="start"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/image1" />
+
+            <TextView
+                android:id="@+id/textusername2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:text="Ibu Sri" />
+
+            <TextView
+                android:id="@+id/textisidiskusi2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:text="Bagaimana cara mengatur emosi untuk tidak melampiaskan ke anak?" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <TextView
             android:id="@+id/textdiskusibaruin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Tambahkan Diskusi Baru"
+            android:layout_height="35dp"
+            android:text="Tambahkan Diskusi"
             android:textSize="15dp"
             android:paddingTop="5dp"
             android:textAlignment="center"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginEnd="35dp"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
