--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -268,94 +268,126 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-
-            <TextView
-                android:id="@+id/textTahun3"
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5 - 12 Tahun"
-                tools:layout_editor_absoluteX="57dp"
-                tools:layout_editor_absoluteY="434dp" />
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/bg_rounded_30">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="75dp"
+                    android:layout_marginEnd="75dp"
+                    android:background="@drawable/bg_rounded_15_blue"
+                    android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/checkBoxDPT3"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="DPT"
-                tools:layout_editor_absoluteX="110dp"
-                tools:layout_editor_absoluteY="461dp" />
+                    <TextView
+                        android:id="@+id/textTahun3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="5-12 Tahun"
+                        android:textSize="15dp"
+                        android:textColor="@color/white" />
+                </LinearLayout>
 
-            <CheckBox
-                android:id="@+id/checkBoxTifoid2"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="Tifoid"
-                tools:layout_editor_absoluteX="110dp"
-                tools:layout_editor_absoluteY="488dp" />
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <CheckBox
-                android:id="@+id/checkBoxPolio3"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="Polio"
-                tools:layout_editor_absoluteX="110dp"
-                tools:layout_editor_absoluteY="511dp" />
+                    <ImageView
+                        android:id="@id/imageView"
+                        android:src="@drawable/bocah1"
+                        android:layout_gravity="start"
+                        android:layout_width="150dp"
+                        android:layout_height="100dp"/>
 
-            <CheckBox
-                android:id="@+id/checkBoxHepaA2"
-                android:layout_width="109dp"
-                android:layout_height="23dp"
-                android:text="Hepatitis A"
-                tools:layout_editor_absoluteX="110dp"
-                tools:layout_editor_absoluteY="534dp" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <CheckBox
+                            android:id="@+id/checkBoxDPT3"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="DPT"
+                            tools:layout_editor_absoluteX="110dp"
+                            tools:layout_editor_absoluteY="461dp" />
 
-            <CheckBox
-                android:id="@+id/checkBoxpcv3"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="PCV"
-                tools:layout_editor_absoluteX="110dp"
-                tools:layout_editor_absoluteY="561dp" />
+                        <CheckBox
+                            android:id="@+id/checkBoxTifoid2"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="Tifoid"
+                            tools:layout_editor_absoluteX="110dp"
+                            tools:layout_editor_absoluteY="488dp" />
 
-            <CheckBox
-                android:id="@+id/checkBoxVarisela2"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="Varisela"
-                tools:layout_editor_absoluteX="213dp"
-                tools:layout_editor_absoluteY="461dp" />
+                        <CheckBox
+                            android:id="@+id/checkBoxPolio3"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="Polio"
+                            tools:layout_editor_absoluteX="110dp"
+                            tools:layout_editor_absoluteY="511dp" />
 
-            <CheckBox
-                android:id="@+id/checkBoxMMR2"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="MMR"
-                tools:layout_editor_absoluteX="213dp"
-                tools:layout_editor_absoluteY="488dp" />
+                        <CheckBox
+                            android:id="@+id/checkBoxHepaA2"
+                            android:layout_width="109dp"
+                            android:layout_height="20dp"
+                            android:text="Hepatitis A"
+                            tools:layout_editor_absoluteX="110dp"
+                            tools:layout_editor_absoluteY="534dp" />
 
-            <CheckBox
-                android:id="@+id/checkBoxInflu2"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="Influenza"
-                tools:layout_editor_absoluteX="213dp"
-                tools:layout_editor_absoluteY="511dp" />
+                        <CheckBox
+                            android:id="@+id/checkBoxpcv3"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="PCV"
+                            tools:layout_editor_absoluteX="110dp"
+                            tools:layout_editor_absoluteY="561dp" />
 
-            <CheckBox
-                android:id="@+id/checkBoxCampak3"
-                android:layout_width="90dp"
-                android:layout_height="23dp"
-                android:text="Campak"
-                tools:layout_editor_absoluteX="214dp"
-                tools:layout_editor_absoluteY="534dp" />
+                        <CheckBox
+                            android:id="@+id/checkBoxVarisela2"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="Varisela"
+                            tools:layout_editor_absoluteX="213dp"
+                            tools:layout_editor_absoluteY="461dp" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/ic_media_rew"
-                tools:layout_editor_absoluteX="151dp"
-                tools:layout_editor_absoluteY="611dp" />
+                        <CheckBox
+                            android:id="@+id/checkBoxMMR2"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="MMR"
+                            tools:layout_editor_absoluteX="213dp"
+                            tools:layout_editor_absoluteY="488dp" />
+
+                        <CheckBox
+                            android:id="@+id/checkBoxInflu2"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="Influenza"
+                            tools:layout_editor_absoluteX="213dp"
+                            tools:layout_editor_absoluteY="511dp" />
+
+                        <CheckBox
+                            android:id="@+id/checkBoxCampak3"
+                            android:layout_width="90dp"
+                            android:layout_height="20dp"
+                            android:text="Campak"
+                            tools:layout_editor_absoluteX="214dp"
+                            tools:layout_editor_absoluteY="534dp" />
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </ScrollView>
