--- a/app/src/main/res/layout/fragment_article_child_violence.xml
+++ b/app/src/main/res/layout/fragment_article_child_violence.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView android:id="@+id/scrollView1"
+    android:background="#000000"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,6 +26,7 @@
         android:layout_gravity="center"
         android:textColor="@color/black"
         android:textSize="20dp"
+        android:layout_marginBottom="10dp"
         android:text="Artikel  Kekerasan anak" />
 
     <TextView
@@ -39,6 +48,7 @@
 
     <TextView
         android:id="@+id/textpernyataanisiartikel"
+        android:layout_marginTop="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -48,3 +58,5 @@
         android:text="Kekerasan fisik adalah agresi fisik diarahkan pada seorang anak oleh orang dewasa. Hal ini dapat melibatkan meninju, memukul, menendang, mendorong, menampar, membakar, membuat memar, menarik telinga atau rambut, menusuk, membuat tersedak atau menguncang seorang anak. Pada usia ini otak anak mengalami pertumbuhan yang sangat pesat yang dikenal dengan istilah emas." />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+
+</ScrollView>
