update welcome flo

--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -14,6 +14,9 @@
         android:id="@+id/imageView"
         android:layout_width="332dp"
         android:layout_height="127dp"
-        android:src="@drawable/image1" />
+        android:src="@drawable/image1"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="200dp"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
